--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+ .letter-square {
+  width: 40px;
+  height: 40px;
+  background-color: #007bff; /* Blue background */
+  color: white; /* White text */
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
